--- a/style.css
+++ b/style.css
@@ -18,6 +18,22 @@ body {
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.7);
 }
 
+.logo-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  width: 30px; /* Adjust the width as needed */
+  height: 30px; /* Adjust the height as needed */
+  margin-right: 10px; /* Add some spacing between the logo and text */
+}
+
+.home-text {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  margin-left: 0px; /* Adjust the spacing between the logo and text */
+}
+
 .btn-circle {
   width: 50px;
   height: 50px;
@@ -78,6 +94,33 @@ body {
   height: 150px; 
 }
 
+.taglines {
+  font-family: "Arial", sans-serif; /* Change the font family */
+}
+
+.tagline1,
+.tagline2,
+.tagline3a,
+.tagline3b {
+  font-family: "Times New Roman", serif; /* Change the font family */
+}
+
+@keyframes glowing {
+  0% {
+    text-shadow: 0 0 10px #fff;
+  }
+  50% {
+    text-shadow: 0 0 20px #ffffff, 0 0 30px #ffffff;
+  }
+  100% {
+    text-shadow: 0 0 10px #fff;
+  }
+}
+
+.tagline2, .tagline3b {
+  animation: glowing 2s infinite;
+}
+
 
 #twoam::before {
   content: "";
@@ -86,12 +129,12 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("samplebg.jpg");
+  background-image: url("Webbackground.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  background-color: rgba(28, 28, 28, 0.5); /* Set opacity to 50% */
+  background-color: rgba(155, 153, 153, 0.5); /* Set opacity to 50% */
   z-index: -1;
 }
 
